adding creation of userProfile
