# app/Http/Controllers/ProfileController.php
@@ -64,6 +64,77 @@ class ProfileController extends Controller
     }
 
     /**
+     *
+     *  * @SWG\Post (
+     *      path = "/profiles/",
+     *      operationId = "createProfile",
+     *      tags = {"Profiles"},
+     *      summary  = "create a  user profile",
+     *      description = "Create a user's profile",
+     *
+     *   @SWG\SecurityScheme(
+     *         securityDefinition="Bearer",
+     *         type="apiKey",
+     *         name="Authorization",
+     *         in="header"
+     *     ),
+     *
+     *
+     *     @SWG\Parameter(
+     *     name = "first name",
+     *     in = "formData",
+     *     type = "string",
+     *     description = "first name",
+     *     required =true,
+     *     ),
+     *     @SWG\Parameter(
+     *     name = "last name",
+     *     in = "formData",
+     *     type = "string",
+     *     description = "last name",
+     *     required =true,
+     *     ),
+     *
+     *
+     *     @SWG\Parameter(
+     *     name = "bio",
+     *     in = "formData",
+     *     type = "string",
+     *     description = "bio text",
+     *     required =true,
+     *     ),
+     *
+     *
+     *
+     *
+     *
+     *
+     *     @SWG\Parameter(
+     *     name = "Authorization",
+     *     in = "header",
+     *     type = "string",
+     *     description = "Bearer TOKEN",
+     *     required =true,
+     *
+     *     ),
+     *
+     *      @SWG\Response(
+     *          response = 200,
+     *          description = "succes: true"
+     *      ),
+     *     @SWG\Response(response = 422, description = "The given data was invalid"),
+     *     )
+     *    )
+     *
+     *
+     *
+     *
+     *
+     *
+     *
+     *
+     *
+     *
      * Store a newly created resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
@@ -101,7 +172,7 @@ class ProfileController extends Controller
      * @SWG\Get (
      *      path = "/profiles/{id}",
      *      operationId = "getProfileById",
-     *      tags = {"Profile"},
+     *      tags = {"Profiles"},
      *      summary  = "Get profile info",
      *      description = "return profile data",
      * @SWG\Parameter(
@@ -136,12 +207,25 @@ class ProfileController extends Controller
 
     /**
      *
-     * /**
      *
-     * @SWG\Post (
+     * Show the form for editing the specified resource.
+     *
+     * @param  int  $id
+     * @return \Illuminate\Http\Response
+     */
+    public function edit($id)
+    {
+        //
+    }
+
+    /**
+     *
+     *  * /**
+     *
+     * @SWG\Put (
      *      path = "/profiles/{id}",
      *      operationId = "editProfile",
-     *      tags = {"Profile"},
+     *      tags = {"Profiles"},
      *      summary  = "edit a  user profile",
      *      description = "Edit a user's profile",
      *
@@ -213,18 +297,6 @@ class ProfileController extends Controller
      *
      *
      *
-     *
-     * Show the form for editing the specified resource.
-     *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
-     */
-    public function edit($id)
-    {
-        //
-    }
-
-    /**
      * Update the specified resource in storage.
      *
      * @param  \Illuminate\Http\Request  $request
