# storage/api-docs/api-docs.json
@@ -135,7 +135,7 @@
         "/profiles/{id}": {
             "get": {
                 "tags": [
-                    "Profile"
+                    "Profiles"
                 ],
                 "summary": "Get profile info",
                 "description": "return profile data",
@@ -155,6 +155,59 @@
                     },
                     "400": {
                         "description": "Bad request"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Profiles"
+                ],
+                "summary": "edit a  user profile",
+                "description": "Edit a user's profile",
+                "operationId": "editProfile",
+                "parameters": [
+                    {
+                        "name": "email",
+                        "in": "formData",
+                        "description": "email",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "first name",
+                        "in": "formData",
+                        "description": "first name",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "last name",
+                        "in": "formData",
+                        "description": "last name",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "bio",
+                        "in": "formData",
+                        "description": "bio text",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "name": "Authorization",
+                        "in": "header",
+                        "description": "Bearer TOKEN",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "succes: true"
+                    },
+                    "422": {
+                        "description": "The given data was invalid"
                     }
                 }
             }
